# PowerGauge-Challenge1

./: .gitignore  CMakeLists.txt  README.md  dataList1.json  dataList3.json  dataList5.json  dataSource1.json  dataSource3.json  dataSource5.json  main.cpp  res.qrc
backend/: backend.cpp  backend.h  datasource.cpp  datasource.h
ui/: DataRect.qml  main.qml
